--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,9 +16,11 @@ img{
 }
 ul{
     list-style: none;
+    margin: 0;
 }
 a, a:focus, a:hover{
     text-decoration: none;
+    display: inline-block;
 }
 /*-----Header-----*/
 #header{
@@ -161,6 +163,76 @@ i.phone{
 #main-slider .owl-dots .owl-dot:hover span{
     background-color: #ff001f;
 }
+
+.title{
+    font-size: 16px;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 10px;
+    background-color: #f5f5f5;
+}
+/*-----Mobile list-----*/
+.mobile-pd-list{
+    display: flex;
+    flex-wrap: wrap;
+    border-top: 1px solid #ebebeb;
+    border-bottom: 1px solid #ebebeb;
+}
+.mobile-pd{
+    width: 50%;
+    padding: 10px;
+    border-right: 1px solid #ebebeb;
+    border-bottom: 1px solid #ebebeb;
+}
+.mobile-pd a{
+    color: #383838;
+}
+.pd-name{
+    font-size: 13px;
+    font-weight: bold;
+}
+.pd-price{
+    font-size: 13px;
+}
+.pd-img{
+    text-align: center;
+}
+.pd-img img{
+    width: 70%;
+}
+
+/*-----Laptop list-----*/
+
+.laptop-pd{
+    display: flex;
+    border-bottom: 1px solid #ebebeb;
+    color: #828282;
+}
+.laptop-pd .pd-img{
+    display: flex;
+    width: 38%;
+    margin-right: 2%;
+}
+.laptop-pd .pd-img img{
+    width: 100%;
+}
+.laptop-pd .pd-description{
+    width: 60%;
+}
+.laptop-pd .pd-description p{
+    font-size: 12px;
+}
+.laptop-pd .pd-description .pd-price{
+    font-size: 13px;
+}
+
+
+
+
+
+
+
+
 /*-----Footer-----*/
 #footer .contact{
     display: flex;
